--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -22,13 +22,14 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5st-xg-l0q" customClass="VideoView" customModule="LASDictionaryV2" customModuleProvider="target">
                                 <rect key="frame" x="79" y="289" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pr4-DS-jcc">
                                 <rect key="frame" x="166" y="90" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -77,12 +78,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="apu-wi-uWm">
-                                <rect key="frame" x="0.0" y="84" width="375" height="539"/>
+                                <rect key="frame" x="0.0" y="84" width="375" height="534"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="519" id="5K1-2m-8JB"/>
-                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" textLabel="Av5-Ds-2g8" style="IBUITableViewCellStyleDefault" id="ufZ-IJ-OQf" customClass="SignTableViewCell" customModule="LASDictionaryV2" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
@@ -95,7 +93,7 @@
                                                     <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.40000000000000002" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I86-v3-tEu">
@@ -104,7 +102,7 @@
                                                 </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.91095840253841909" green="0.92506062087273822" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="nameLabel" destination="Av5-Ds-2g8" id="5eZ-kb-d28"/>
@@ -120,131 +118,42 @@
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z3s-JM-7Tr">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="ZZo-4Y-heM"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="m4Q-90-epk"/>
-                                </constraints>
-                                <items>
-                                    <barButtonItem systemItem="bookmarks" id="JaP-Li-Obl">
-                                        <connections>
-                                            <action selector="dictionaryButton:" destination="H0e-sS-q81" id="752-dq-nJ1"/>
-                                            <segue destination="Spm-Pz-29j" kind="show" identifier="showDictionary" id="shn-wx-zqQ"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem systemItem="play" id="0Ea-bc-1rl">
-                                        <connections>
-                                            <action selector="favoritesButton:" destination="H0e-sS-q81" id="CKR-n7-6D6"/>
-                                            <segue destination="fT2-d2-GG9" kind="showDetail" identifier="showFavorites" id="bri-NG-g3P"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
-                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="W2o-Ty-luw">
-                                <rect key="frame" x="-16" y="618" width="375" height="49"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W2o-Ty-luw">
+                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <items>
                                     <tabBarItem systemItem="favorites" id="2xv-fU-MrX"/>
-                                    <tabBarItem title="Item" id="eho-BV-hwd"/>
+                                    <tabBarItem systemItem="bookmarks" id="eho-BV-hwd"/>
                                     <tabBarItem systemItem="more" id="s4S-76-Xsw"/>
                                 </items>
+                                <color key="tintColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tabBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="leading" secondItem="Z3s-JM-7Tr" secondAttribute="leading" id="044-mk-YlV"/>
-                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="trailing" secondItem="Z3s-JM-7Tr" secondAttribute="trailing" id="NSs-Kd-0ND"/>
-                            <constraint firstItem="NcC-iX-pZb" firstAttribute="top" secondItem="Z3s-JM-7Tr" secondAttribute="bottom" id="Tte-iG-aQ9"/>
-                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="trailing" secondItem="apu-wi-uWm" secondAttribute="trailing" id="VuS-76-de9"/>
-                            <constraint firstItem="Z3s-JM-7Tr" firstAttribute="top" secondItem="apu-wi-uWm" secondAttribute="bottom" id="XiW-gU-Rn2"/>
-                            <constraint firstItem="apu-wi-uWm" firstAttribute="bottom" secondItem="Z3s-JM-7Tr" secondAttribute="top" id="YC8-1p-7qr"/>
-                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="bottom" secondItem="apu-wi-uWm" secondAttribute="top" id="cGk-pJ-T3o"/>
-                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="leading" secondItem="apu-wi-uWm" secondAttribute="leading" id="eUu-a7-cYU"/>
-                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="top" secondItem="UQS-pR-koQ" secondAttribute="bottom" id="hXA-Ah-VPY"/>
-                            <constraint firstAttribute="trailing" secondItem="p9Y-Jy-JeP" secondAttribute="trailing" id="ieY-rV-TNw"/>
-                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="leading" secondItem="3up-Pl-p7O" secondAttribute="leading" id="qG4-jx-2ST"/>
+                            <constraint firstItem="W2o-Ty-luw" firstAttribute="top" secondItem="apu-wi-uWm" secondAttribute="bottom" id="44z-Li-8us"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="leading" secondItem="W2o-Ty-luw" secondAttribute="leading" id="4a9-ko-YkH"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="trailing" secondItem="apu-wi-uWm" secondAttribute="trailing" id="Hhx-6a-OLp"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="trailing" secondItem="W2o-Ty-luw" secondAttribute="trailing" id="Mp7-cw-AGS"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="leading" secondItem="3up-Pl-p7O" secondAttribute="leadingMargin" constant="-16" id="aQf-8u-qD1"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="top" secondItem="3up-Pl-p7O" secondAttribute="topMargin" id="bo8-71-i7n"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="leading" secondItem="apu-wi-uWm" secondAttribute="leading" id="hOH-zu-3FJ"/>
+                            <constraint firstItem="p9Y-Jy-JeP" firstAttribute="centerX" secondItem="3up-Pl-p7O" secondAttribute="centerX" id="kD9-DS-o51"/>
+                            <constraint firstItem="W2o-Ty-luw" firstAttribute="bottom" secondItem="3up-Pl-p7O" secondAttribute="bottomMargin" id="rgA-ud-f2L"/>
+                            <constraint firstItem="apu-wi-uWm" firstAttribute="top" secondItem="p9Y-Jy-JeP" secondAttribute="bottom" id="s8f-5g-9F4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Lauricella Advanced Sign" id="vPg-2J-0rP"/>
                     <connections>
+                        <outlet property="favoriteTabBarItem" destination="2xv-fU-MrX" id="tVR-EU-OEx"/>
                         <outlet property="searchBar" destination="p9Y-Jy-JeP" id="4Ey-VM-1rP"/>
+                        <outlet property="tabBar" destination="W2o-Ty-luw" id="OJ9-P1-qnM"/>
                         <outlet property="tableView" destination="apu-wi-uWm" id="9Gs-7N-tob"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="coi-Ng-AVO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="352.80000000000001" y="-1122.1889055472266"/>
-        </scene>
-        <!--Dictionary Table View Controller-->
-        <scene sceneID="K72-18-4XD">
-            <objects>
-                <tableViewController id="Spm-Pz-29j" customClass="DictionaryTableViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="d2h-sb-kXI">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dictionaryCell" textLabel="WnA-eP-deT" style="IBUITableViewCellStyleDefault" id="5VH-0l-h1C" customClass="DictionaryTableViewCell" customModule="LASDictionaryV2" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5VH-0l-h1C" id="Z4f-pp-sXy">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WnA-eP-deT">
-                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="dictionarySignLabel" destination="WnA-eP-deT" id="hJE-sE-Uki"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="Spm-Pz-29j" id="aT3-kz-aeJ"/>
-                            <outlet property="delegate" destination="Spm-Pz-29j" id="AjH-au-pvL"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="Up7-gs-mtQ"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Im-Kx-hdO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1377" y="-1101"/>
-        </scene>
-        <!--Table View Controller-->
-        <scene sceneID="gbg-Wb-Wr6">
-            <objects>
-                <tableViewController id="fT2-d2-GG9" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="IRu-m8-ZKu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoriteCell" id="0hm-ej-NNH">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0hm-ej-NNH" id="d1y-9B-9ID">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="fT2-d2-GG9" id="v4w-dh-Uzd"/>
-                            <outlet property="delegate" destination="fT2-d2-GG9" id="TqD-b2-oOU"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="apf-Df-bJd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1260" y="-342"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="cYT-Z0-vL0">
